search more issue fixed check box alignment issue fixed desc order issue fixed

--- a/asset/css/customer.css
+++ b/asset/css/customer.css
@@ -101,6 +101,9 @@ body, html {
     padding-top: 30px;
 }
 
+.p-t-0 {
+    padding-top: 0px !important;
+}
     /*#margin style*/
 .m-0 {
     margin: 0px;
