--- a/cloud_product/css/productApp.css
+++ b/cloud_product/css/productApp.css
@@ -68,3 +68,51 @@ md-checkbox .md-label {
 {
     padding-bottom: 0px;
 }
+
+.p-t-0 > div
+{
+    padding-top: 0px !important;
+}
+
+.h-0 > div
+{
+ height: 0px;
+}
+.m-t-2
+{
+    margin-top: 2px !important;
+}
+
+.m-t-0
+{
+    margin-top: 0px !important;
+}
+.m-b-10
+{
+    margin-bottom: 10px !important;
+}
+
+.m-b-40
+{
+    margin-bottom: 40px !important;
+}
+
+.m-b-10 > div
+{
+    margin-bottom: 10px !important;
+}
+
+.h-0
+{
+    height: 0px !important;
+}
+
+.h-30
+{
+    height: 30px !important;
+}
+
+.h-60
+{
+    height: 60px !important;
+}
